Correccion errores y comentarios